Bug 459462 - Reset canvas orientation shortcut rotates canvas, performs the opposite rotation
Summary: Reset canvas orientation shortcut rotates canvas, performs the opposite rotation
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Shortcuts and Canvas Input Settings (other bugs)
Version First Reported In: 5.1.1
Platform: Microsoft Windows Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 465906 (view as bug list)
Depends on:
Blocks: 465906
  Show dependency treegraph
 
Reported: 2022-09-20 21:32 UTC by ComfySoftPup
Modified: 2023-02-28 14:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Usage Log (17.72 KB, text/plain)
2022-09-20 21:43 UTC, ComfySoftPup
Details
System Info (5.83 KB, text/plain)
2022-09-20 21:43 UTC, ComfySoftPup
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ComfySoftPup 2022-09-20 21:32:39 UTC
SUMMARY
We went into the Canvas Input Settings > Rotate Canvas and created a shortcut (Alt+MiddleClick or Ctrl+Shift+MiddleClick) that would reset the canvas orientation. Surprisingly, if we hold this shortcut, it rotates the canvas. If we press on the shortcut once, it will inverse the previous rotation (so if we rotate 90º, pressing the shortcut rotates -90º). Pressing it a second time will correctly reset the orientation to 0º.


STEPS TO REPRODUCE
1. Go into Canvas Input Settings > Rotate Canvas
2. Create shortcut to reset canvas orientation with Alt+MiddleClick
3. Attempt using the shortcut after a rotation, also try pressing and holding it as you drag.


SOFTWARE/OS VERSIONS
Windows 10 64-bit 19044.1889
Comment 1 ComfySoftPup 2022-09-20 21:43:02 UTC
Created attachment 152290 [details]
Usage Log
Comment 2 ComfySoftPup 2022-09-20 21:43:28 UTC
Created attachment 152291 [details]
System Info
Comment 3 daxpedda 2023-01-30 11:10:06 UTC
Can confirm the exact the same happening on Linux X11.
Comment 4 Halla Rempt 2023-02-17 10:56:12 UTC
*** Bug 465906 has been marked as a duplicate of this bug. ***
Comment 5 Bug Janitor Service 2023-02-27 08:25:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1762
Comment 6 Invent Merge Service 2023-02-28 14:52:56 UTC
Git commit daf98f4f8fd35e557993d8adebff178f688dfaca by Merge Service, on behalf of Sharaf Zaman.
Committed on 28/02/2023 at 14:51.
Pushed by merge-service into branch 'master'.

Bugfix: Reset canvas rotation shortcut behaving erratic.

Part-of: <https://invent.kde.org/graphics/krita/-/merge_requests/1762>

M  +6    -1    libs/ui/input/kis_rotate_canvas_action.cpp

https://invent.kde.org/graphics/krita/commit/daf98f4f8fd35e557993d8adebff178f688dfaca