Bugfix: Reset canvas rotation shortcut behaving erratic.

BUG:459462

Part-of: <https://invent.kde.org/graphics/krita/-/merge_requests/1762>